# replex

./: .gitignore  justfile  mprocs.yaml
backend/: Cargo.toml  justfile  nostr.json
backend/schema/: v0.sql
backend/src/: config.rs  error.rs  federation.rs  invoice.rs  lnurl.rs  main.rs  nostr.rs  serde_helpers.rs  state.rs  utils.rs
backend/src/db/: app_user.rs  invoice.rs  mod.rs
backend/src/model/: app_user.rs  db.rs  invoice.rs  mod.rs
backend/src/model/invoices/: db.rs  mod.rs
backend/src/model/users/: db.rs  mod.rs
backend/src/router/: mod.rs
backend/src/router/handlers/: mod.rs  register.rs
backend/src/router/handlers/invoices/: mod.rs
backend/src/router/handlers/lnurlp/: callback.rs  mod.rs  verify.rs  well_known.rs
backend/src/state/: invoice_manager.rs  mod.rs
backend/src/utils/: federation.rs  invoice.rs  lnurl.rs  mod.rs  user.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Content.tsx  types.tsx  wallet.ts
frontend/src/components/: BalanceDisplay.tsx  ErrorDisplay.tsx  Header.tsx  InvoiceDisplay.tsx  InvoiceForm.tsx  Transactions.tsx
frontend/src/contexts/: AppContext.tsx  NostrContext.tsx  ReceiveContext.tsx  SendContext.tsx  WalletContext.tsx
frontend/src/hooks/: useWallet.tsx
frontend/src/screens/: GrokChat.tsx  Home.tsx  Receive.tsx
frontend/src/types/: wallet.ts
