[package]
name = "repl-ex-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
lazy_static = "1.4.0"
async-utility = "0.2.0"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "time",
] }
sqlb = "0.4.0"
futures = "0.3.30"
itertools = "0.13.0"
hex = "0.4.3"
multimint = "0.4.0"
