[package]
name = "repl-ex-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
lazy_static = "1.4.0"
async-utility = "0.2.0"
tokio-postgres = "0.7.12"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
futures = "0.3.30"
itertools = "0.13.0"
hex = "0.4.3"
multimint = "0.4.0"
postgres-from-row = "0.5.2"
postgres-types = "0.2.8"
bytes = "1.7.2"
nostr-sdk = "0.35.0"
